# semsac

./: .gitignore  README.md
.github/workflows/: static.yml
app/: README.md
app/data/: SemSac_notices.xlsx
app/src/catalogues/: lieux_des_faits.py
migration/app/: AD31Conversion.py  README.md  config.yml  pyproject.toml
migration/app/data/catalogues/: SemSac_ark.xlsx  SemSac_juridictions.xlsx  SemSac_lieux_total_geocode.xlsx  SemSac_personnes_morales.xlsx  SemSac_personnes_physiques.xlsx
migration/app/data/templateJSON/: notices.json
migration/app/data/vocabularies/: ordreInstruction.json  qualifFaits.json  sexePersonnes.json  typeCollectivité.json  typeJuridiction.json  typeLieu.json  typeProcedure.json  typeProfession.json
migration/app/src/: jsonld_notices.py  semsac_notices.py  tools.py
migration/app/src/catalogues/: dataset.py  juridictions.py  personnes_morales.py
migration/app/src/template/: template_notices.py
migration/campagnes/: README.md  campagnes_20260210.csv  campagnes_20260210.xlsx  clean-campagnes.ru  construct-campagnes.rq  construct-cote-lot.rq  correspondance_cote_lot.csv  correspondance_cote_lot.xlsx  run-convert-campagnes.sh  select-campagnes.rq
site/: .eleventy.js  package-lock.json  package.json  publish.sh
site/assets/css/: sparnatural-theme-ad31.css
site/configs/: sparnatural-specific.ttl
site/hello-sparnatural/: config.ttl  index.html
site/src/: index.njk
site/static/: index.html
specifications/contenu_editorial/: SEMSAC_topo_presentationsacs.docx  presentation_projet.docx  principales_entites.docx
(+22 files in other folders)
